# Backend

./: .env.template  .gitignore  README.md  alembic.ini  localhost-key.pem  localhost.pem  pyproject.toml
scripts/: run_tests.ps1  set_dev_env.ps1  set_test_env.ps1  start  start.bat  start.ps1  start_dev  start_dev.bat  start_dev.ps1
src/: config.py  database.py  main.py
src/api/: auth.py  users.py
src/application/auth/: dto.py  password.py  token.py
src/application/chat/: dto.py  enums.py
src/application/common/: dto.py  exceptions.py
src/application/google_drive/: dto.py
src/application/image/: dto.py
src/application/project/: dto.py
src/application/user/: dto.py
src/infrastructure/db/: __init__.py  deps.py  uow.py
src/infrastructure/di/: __init__.py
src/infrastructure/mediator/: __init__.py
src/infrastructure/openai/: __init__.py  client.py  config.py
src/infrastructure/s3/: __init__.py  config.py  object_storage.py  s3_client.py
src/migrations/: env.py
src/migrations/versions/: 2025_01_12_2356-eed3ee3d505a_initial.py  2025_01_13_1709-01c54f4ec2e3_initial.py  (+1 more)
src/models/: module.py  users.py
src/module/: router.py
src/presentation/api/: __init__.py  (+1 more)
src/repository/: base.py  module.py
src/schemas/: users.py
src/test/: bruh.py  dto.py  gok-gok-gok.py  main.py  repository.py
src/tests/: conftest.py  test_all.py
src_/: config.py  database.py  main.py  utils.py
src_/api/: auth.py  users.py
src_/migrations/: env.py
src_/models/: module.py  users.py
src_/module/: router.py  schemas.py
src_/repository/: base.py  module.py
(+84 files in other folders)
