[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Жеревчук Сергій",email = "Foxtrotserega@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "didiator[di] (>=0.3.1,<0.4.0)",
    "di[anyio] (>=0.75,<0.76)",
    "bcrypt (>=4.2.1,<5.0.0)",
    "aiobotocore (>=2.20.0,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "orjson (>=3.10.15,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
setuptools = "^75.8.0"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
